@@ -1,4 +1,10 @@
 2007-07-01  Jaap Haitsma  <jaap@haitsma.org>
+
+	* src/ephy-history-window.c, src/bookmarks/ephy-bookmarks-editor.c,
+	src/ephy-window.c: Use GTK_STOCK_ABOUT icon i.s.o GNOME_STOCK_ABOUT
+	Fixes bug #452769
+
+2007-07-01  Jaap Haitsma  <jaap@haitsma.org>
 	
 	Changelog entry from the previous commit. I accidently changed the
 	wrong Changelog file
